Tests/Modules/Error/RetryOnly/.build/timedretrygoal.pr
{
  "name": "TimedRetryGoal",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %timedRetryAttempts%, write to %timedRetryAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "math",
          "action": "add",
          "parameters": [
            {
              "name": "A",
              "value": "%timedRetryAttempts%",
              "type": "object"
            },
            {
              "name": "B",
              "value": 1,
              "type": "int"
            }
          ],
          "defaults": null,
          "modifiers": []
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%timedRetryAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%!data%",
              "type": "object"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022timed fail\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "timed fail",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/RetryOnly/TimedRetryGoal.goal",
  "prPath": "/Modules/Error/RetryOnly/.build/timedretrygoal.pr",
  "hash": "c3682ca3c59a1d65c0fcf535415978b1d1d02bc7019282c388101c838ccf5612",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}